--- a/client/dashboard/dashboard(copy).html
+++ b/client/dashboard/dashboard(copy).html
@@ -55,8 +55,10 @@
                   <div layout="column" layout-align="center center">
                     <a href="#" layout layout-align="center center" class="group-title" style="text-decoration:none;"
                        ng-click="sendRegionalReminder()">
-                      <span class="md-subhead group-title"><span hide-xs class="md-subhead group-title">Group</span> Reminder</span><i class="material-icons"
-                                                                                                                         style="">chat_bubble_outline</i></a>
+                      <span class="md-subhead group-title">
+                        <span hide-xs class="md-subhead group-title">Group Reminder</span></span>
+                      <i class="material-icons">chat_bubble_outline</i>
+                    </a>
 
                   </div>
                 </div>
