--- a/client/issue-reports/issue-report.html
+++ b/client/issue-reports/issue-report.html
@@ -1,6 +1,6 @@
 <div flex layout="row" layout-align="center">
 
-  <div flex-xs="100" layout="column" layout-align="center" class="md-padding">
+  <div flex-xs="100" layout="column" layout-align="center" class="md-padding" style="min-height:100vh;">
     <h6 class="md-subhead title">Issue Tracker</h6>
     <div  flex-xs="100" layout="column" layout-align="center center" class="md-padding" id="issue-form-background">
       <div ng-if="msgStatus == 0">
