--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<div class="md-padding" flex layout="column" style=" height:100vh; background-color:white;border:solid thin red;">
+<div class="md-padding" flex layout="column" style="height:100vh; background-color:white;border:solid thin red;">
   <div ng-if="currentUser.accessLevel!='regional'" layout layout-xs="column">
     <div class="left-container" flex="70" flex-lg="67" flex-md="65" flex-sm="100" flex-xs="100" layout layout-xs>
       <div flex class="md-padding">
@@ -154,7 +154,7 @@
         </div>
         <div class="right-container md-padding" flex="30" flex-lg="33" flex-md="35" flex-sm="45" flex-xs="100" layout
              layout-xs style="min-height:100vh;">
-          <div ng-if="selectedState" layout="column" class="md-padding">
+          <div ng-if="selectedState" layout="column" class="md-padding" style="min-height:100vh;">
             <div layout layout-align="space-around center" class="md-padding" style="background-color:#0F6AB4;width:100%">
               <div flex-33>
                 <span>Filter</span>
