--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -153,8 +153,8 @@
           </div>
         </div>
         <div class="right-container md-padding" flex="30" flex-lg="33" flex-md="35" flex-sm="45" flex-xs="100" layout
-             layout-xs style="min-height:100vh;">
-          <div ng-if="selectedState" layout="column" class="md-padding" style="min-height:100vh;">
+             layout-xs style="min-height:100%;">
+          <div ng-if="selectedState" layout="column" class="md-padding">
             <div layout layout-align="space-around center" class="md-padding" style="background-color:#0F6AB4;width:100%">
               <div flex-33>
                 <span>Filter</span>
