--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<div class="md-padding" flex layout="column" style="height:100vh; background-color:white;border:solid thin red;">
+<div class="md-padding" flex layout="column" style="height:100vh; background-color:white;">
   <div ng-if="currentUser.accessLevel!='regional'" layout layout-xs="column">
     <div class="left-container" flex="70" flex-lg="67" flex-md="65" flex-sm="100" flex-xs="100" layout layout-xs>
       <div flex class="md-padding">
