--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -153,9 +153,9 @@
           </div>
         </div>
         <div class="right-container md-padding" flex="30" flex-lg="33" flex-md="35" flex-sm="45" flex-xs="100" layout
-             layout-xs style="min-height:100vh;">
-          <div ng-if="selectedState" layout="column" class="md-padding" style="min-height:100vh;">
-            <div layout layout-align="space-around center" class="md-padding" style="background-color:#0F6AB4;width:100%">
+             layout-xs style="min-height:100vh; ">
+          <div ng-if="selectedState" layout="column" class="md-padding" >
+            <div layout layout-align="space-around center" class="md-padding" style="background-color:#0F6AB4;">
               <div flex-33>
                 <span>Filter</span>
                 <select style="margin:0 1rem!important;" ng-model="searchCriteria" aria-label="group"
