--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -39,9 +39,9 @@
         </div>
       </div>
     </div>
-    <div hide-xs hide-sm class="right-container md-padding" flex-gt-lg="30" flex-md="35" flex-sm="45" flex-xs="100"
+    <div hide-xs hide-sm class="right-container" flex-gt-lg="30" flex-md="35" flex-sm="45" flex-xs="100"
          layout layout-xs style="min-height:100%;">
-      <div layout="column" class="md-padding" style="">
+      <div layout="column" class="" style="">
         <div layout layout-align="start start" id="download-container">
           <div ng-if="statusCurrent" layout layout-align="center center" class="confirmation-icon"><i
             class="material-icons">done</i></div>
@@ -72,7 +72,7 @@
               <div flex flex-xs="100" layout>
                 <div>
                   <div layout="column">
-                    <span class="md-title title" style="">Issue Tracker</span>
+                    <span class="md-subhead title" style="">Issue Tracker</span>
                     <div flex-xs="100" layout="column" layout-align="center center" class="md-padding"
                          id="issue-form-background">
 
